Fixed issue where grid would be cut off at the end of scroll, added toggle for grid borders

--- a/src/resources/default.css
+++ b/src/resources/default.css
@@ -72,6 +72,13 @@
 }
 
 .grid-container {
+    -fx-background-color: transparent;
+    -fx-alignment: center;
     -fx-pref-height: 497;
     -fx-pref-width: 497;
+}
+
+.center-pane {
+    -fx-background-color: transparent;
+    -fx-alignment: center;
 }
